--- a/src/content/pharmacology/cvs/anti-hypertensives/index.mdx
+++ b/src/content/pharmacology/cvs/anti-hypertensives/index.mdx
@@ -13,7 +13,7 @@
 1. **Potassium-sparing diuretics**
    - `spironolactone`, `eplerenone`, `amiloride`, `triamterene`
 
-### 2. Sympatholytic (Adrenergic Inhibitors)
+### 2. Sympatholytics (Adrenergic Inhibitors)
 
 1. **Centrally Acting Agents**
    - `clonidine`, `methyldopa`
@@ -25,7 +25,7 @@
    - `reserpine`, `guanethidine`
 
 1. **β-Adrenergic Blockers**
-   - _Non-selective_ — `propranolol`, `nadolol`, `timolol`
+   - _Non-selective (β₁ + β₂)_ — `propranolol`, `nadolol`, `timolol`
    - _Cardioselective (β₁)_ — `atenolol`, `metoprolol`, `bisoprolol`, `nebivolol`
    - _With α-blocking activity_ — `labetalol`, `carvedilol`
 
