--- a/src/content/pharmacology/cvs/anti-hypertensives/raas/acei.mdx
+++ b/src/content/pharmacology/cvs/anti-hypertensives/raas/acei.mdx
@@ -11,6 +11,8 @@
 - `trandolapril`
 - `benazepril`
 
+> ↓ afterload, ↓ preload, ↓ BP, ↓ remodeling of heart/vessels.
+
 > Note: (most are **prodrugs**, except `captopril` and `lisinopril`)
 
 ## Mechanism of Action (MOA)
@@ -20,7 +22,6 @@
   - ↓ Angiotensin II–mediated **vasoconstriction**, **aldosterone secretion**, and **sympathetic activity**.
 
 - Also prevent **bradykinin degradation**, → ↑ bradykinin → **vasodilation** (via nitric oxide and prostacyclin).
-- **Net effects:** ↓ afterload, ↓ preload, ↓ BP, ↓ remodeling of heart/vessels.
 
 ## Pharmacodynamics
 
