--- a/src/content/pharmacology/cvs/anti-hypertensives/raas/arb.mdx
+++ b/src/content/pharmacology/cvs/anti-hypertensives/raas/arb.mdx
@@ -10,6 +10,8 @@
 - `telmisartan`
 - `eprosartan`
 
+> ↓ BP, ↓ preload & afterload, ↓ cardiac remodeling.
+
 ## Mechanism of Action (MOA)
 
 - Competitively **block angiotensin II (AII)** binding to **AT₁ receptors** on vascular smooth muscle and adrenal cortex.
@@ -19,7 +21,6 @@
   - ↓ **Sympathetic activation**
 
 - **Bradykinin metabolism is unaffected**, unlike ACE inhibitors.
-- **Net effect:** ↓ BP, ↓ preload & afterload, ↓ cardiac remodeling.
 
 ## Pharmacodynamics
 
